test frontend for socket.io

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div>
         <form id='chatbox'></form>
-            <input type="text" id='text' name="textmessage">
+            <input type="text" id='text' name="inputtext">
             <br>
             <input type="submit" value="send">
         </form>
