--- a/index.html
+++ b/index.html
@@ -5,20 +5,24 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="client-socket.js"></script>
+    <script src="/socket.io/socket.io.js" defer></script>
+    <script src="client-socket.js " defer></script>
+    <style>
+        .form {
+           margin-left: 1em;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
         <ul id='1'></ul>
     </div>
-    <div>
-        <form id='chatbox'></form>
-            <input type="text" id='text' name="inputtext">
+
+        <form id='chatbox' class="form">
+            <input type="text" id='text' name="text" value=''>
             <br>
-            <input type="submit" value="send">
+            <button type="submit">send</button>
         </form>
-    </div>
 
 </body>
 </html>
