nodemon: npm run server

--- a/index.html
+++ b/index.html
@@ -24,5 +24,9 @@
             <button type="submit">send</button>
         </form>
 
+    <div>
+        <a href='http://localhost:3000/page2.html'><button>Login</button></a>
+    </div>
+
 </body>
 </html>
