--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
     </style>
 </head>
 <body>
+    <label for="sender">From</label>
+    <input type="text" id="sender" name="sender">
+    <label for="recipient">To</label>
+    <input type="text" id="recipient" name="recipient">
     <div class="container">
         <ul id='1'></ul>
     </div>
 
         <form id='chatbox' class="form">
+            
+            <br>
             <input type="text" id='text' name="text" value=''>
             <br>
             <button type="submit">send</button>
