--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
     </style>
 </head>
 <body>
-    <label for="sender">From</label>
-    <input type="text" id="sender" name="sender">
-    <label for="recipient">To</label>
-    <input type="text" id="recipient" name="recipient">
+    <p>From</p><p id="sender" style="font-weight: bold;"></p>
+    <P>To</P><p id="receiver" style="font-weight: bold;"></p>
     <div class="container">
         <ul id='1'></ul>
     </div>
