--- a/page2.html
+++ b/page2.html
@@ -5,6 +5,9 @@
     <title>Document</title>
 </head>
 <body>
-    c le login page 
+<form id="">
+    <input type="text">
+    <input type="text">
+</form>
 </body>
 </html>
