--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </style>
 </head>
 <body>
-    <p>From</p><p id="sender" style="font-weight: bold;"></p>
-    <P>To</P><p id="receiver" style="font-weight: bold;"></p>
+    <p>User</p><p id="sender" style="font-weight: bold;"></p>
+    <!-- <P>To</P><p id="receiver" style="font-weight: bold;"></p> -->
     <div class="container">
         <ul id='1'></ul>
     </div>
