--- a/Homepage.html
+++ b/Homepage.html
@@ -17,7 +17,7 @@
     <p>User</p><p id="sender" style="font-weight: bold;"></p>
     <!-- <P>To</P><p id="receiver" style="font-weight: bold;"></p> -->
     <div class="container">
-        <ul id='1'></ul>
+        <ul id='chatroom'></ul>
     </div>
 
         <form id='chatbox' class="form">
