--- a/Homepage.html
+++ b/Homepage.html
@@ -14,8 +14,11 @@
     </style>
 </head>
 <body>
-    <p>User</p><p id="sender" style="font-weight: bold;"></p>
-    <!-- <P>To</P><p id="receiver" style="font-weight: bold;"></p> -->
+    <p>User</p><p id="username" style="font-weight: bold;"></p>
+    <P>Room</P><p id="room" style="font-weight: bold;"></p>
+    <div class="container">
+        <ul id="from"></ul>
+    </div>
     <div class="container">
         <ul id='chatroom'></ul>
     </div>
