--- a/RegistrationPage.html
+++ b/RegistrationPage.html
@@ -31,7 +31,7 @@
           <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
           <label class="form-check-label" for="exampleCheck1">Check me out</label>
         </div>
-        <button type="submit" class="btn btn-primary" aria-required="true">Submit</button>
+        <button type="submit" id = 'submit' class="btn btn-primary" aria-required="true">Submit</button>
       </form>
 
 
