--- a/RegistrationPage.html
+++ b/RegistrationPage.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="formValidator.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" alt='/socket.io/socket.io.js' defer></script>
+    <script src="formValidator.js" defer></script>
 </head>
 <body>
     <form>
@@ -31,7 +31,7 @@
           <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
           <label class="form-check-label" for="exampleCheck1">Check me out</label>
         </div>
-        <button type="submit" id = 'submit' class="btn btn-primary" aria-required="true">Submit</button>
+        <button type="submit" id ='submit' class="btn btn-primary" aria-required="true">Submit</button>
       </form>
 
 
