--- a/RegistrationPage.html
+++ b/RegistrationPage.html
@@ -8,7 +8,7 @@
     <script src="formValidator.js" defer></script>
 </head>
 <body>
-    <form>
+    <form id = 'form'>
         <h1 class='jumbotron'>REGISTRATION</h1>
         <div class="form-group">
         <!-- username -->
@@ -33,6 +33,7 @@
         </div>
         <button type="submit" id ='submit' class="btn btn-primary" aria-required="true">Submit</button>
       </form>
+      
 
 
 
