skripapa partial inclusion of cookies

--- a/RegistrationPage.html
+++ b/RegistrationPage.html
@@ -5,7 +5,7 @@
     <title>Register</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" alt='/socket.io/socket.io.js' defer></script>
-    <script src="formValidator.js" defer></script>
+    <script src="RegistrationPage.js" defer></script>
 </head>
 <body>
     <form id = 'form'>
