--- a/RegistrationPage.html
+++ b/RegistrationPage.html
@@ -18,7 +18,7 @@
         <!-- password -->
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="password" pattern='{5,10}' required title = '5 to 10 characters' required>
+          <input type="password" class="form-control" id="password" pattern='.{5,}' required title = '5 or more characters' required>
         </div>
         <!-- email -->
         <div class="form-group">
