user messaging w/o message saving

--- a/messaging.html
+++ b/messaging.html
@@ -20,7 +20,7 @@
     
     <label class="form" for="recipient">To</label>
     <form id='recipient' name="recipient" class="form">
-        <input type="text" style="font-weight: bold;" required></p>
+        <input id='user2' type="text" style="font-weight: bold;" required></p>
         <br>
         <input id='text' name="text" value='' class="container-fluid">
         <br>
