--- a/Welcome.html
+++ b/Welcome.html
@@ -29,8 +29,8 @@
     </div>
     <div id="other">
     </div>
-    <div id='disconnect' class="col-sm links">
-        <button href="" id="messaging">Logout</button>
+    <div id='dc' class="col-sm links">
+        <button href="" id="disconnect">Logout</button>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
