--- a/messaging.html
+++ b/messaging.html
@@ -18,10 +18,11 @@
     <p id="username" style="font-weight: bold;"></p>
     <div id="chatroom"></div>
     
-    <form id='selectrecipient' class="form">
+    <form id="userform">
         <label for="recipient">To</label>
         <input type="text" id="recipient" name="recipient">
-        <input type="submit" value="select">
+        <button id="add">add</button>
+        <input type="submit" value="select" id="select">
     </form>
 
     <form id='message' name="message" class="form">
