--- a/messaging.html
+++ b/messaging.html
@@ -22,7 +22,8 @@
         <label for="recipient">To</label>
         <input type="text" id="recipient" name="recipient">
         <button id="add">add</button>
-        <input type="submit" value="select" id="select">
+        <button id="select">enter</button>
+        <!-- <button type="submit" value="select" id="select"> -->
     </form>
 
     <form id='message' name="message" class="form">
